--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.GoalsOnTrack">
-        <activity android:name=".flashcard.AllWordInCategory"></activity>
+        <activity android:name=".flashcard.EditWord"></activity>
+        <activity android:name=".flashcard.AllWordInCategory" />
         <activity android:name=".flashcard.AddCardToCategory" />
         <activity android:name=".flashcard.FlashcardPractice" />
         <activity android:name=".reminder.ReminderHome" />
